@@ -62,3 +62,9 @@ define service{
 	check_command		check_and_encrypt!$USER3$/org.sam.sec/file-perm-vulnerabilities
 	_encrypted		1
 	}
+define service{
+	use			sam-generic-wn-active
+	service_description	org.sam.sec.WN-RDSModuleCheck-<VO>
+	check_command		check_and_encrypt!$USER3$/org.sam.sec/rdscheck
+	_encrypted		1
+	}
